# davidsolver

./: .gitignore  .gitmodules  CMakeLists.txt  bm.sh  log  main.cpp  npeigen.py
davidsolver/: CMakeLists.txt  diagh.h  diago_david.cpp  diago_david.h  utils.h
davidsolver/module_base/: CMakeLists.txt
davidsolver/module_base/module_device/: CMakeLists.txt  memory_op.cpp
davidsolver/module_hsolver/: CMakeLists.txt
davidsolver/module_hsolver/kernels/: math_kernel_op.h
